--- a/Yume.Controls/Yume.Controls/Themes/Colors.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Colors.xaml
@@ -1,7 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Color x:Key="DefaultBackgroundHoverColor">#FFF2F2F2</Color>
     <Color x:Key="DefaultBorderHoverColor">#FFA8B0C2</Color>
+    <Color x:Key="DefaultForegroundHoverColor">#FF696C74</Color>
+
+    <Color x:Key="DefaultBackgroundDownColor">#FFEDEDED</Color>
+    <Color x:Key="DefaultBorderDownColor">#FFA8B0C2</Color>
+    <Color x:Key="DefaultForegroundDownColor">#FF696C74</Color>
 
     <Color x:Key="DefaultBackgroundColor">#FFFFFFFF</Color>
     <Color x:Key="DefaultForegroundColor">#FF696C74</Color>
@@ -11,7 +17,12 @@
     <SolidColorBrush x:Key="DefaultBorderColorBrush" Color="{StaticResource DefaultBorderColor}"/>
     <SolidColorBrush x:Key="DefaultForegroundColorBrush" Color="{StaticResource DefaultForegroundColor}"/>
 
-    <SolidColorBrush x:Key="DefaultBgHColorBrush" Color="{StaticResource DefaultBackgroundHoverColor}"/>
-    <SolidColorBrush x:Key="DefaultBrHColorBrush" Color="{StaticResource DefaultBorderHoverColor}"/>
+    <SolidColorBrush x:Key="DefaultBackgroundHoverColorBrush" Color="{StaticResource DefaultBackgroundHoverColor}"/>
+    <SolidColorBrush x:Key="DefaultBorderHoverColorBrush" Color="{StaticResource DefaultBorderHoverColor}"/>
+    <SolidColorBrush x:Key="DefaultForegroundHoverColorBrush" Color="{StaticResource DefaultForegroundHoverColor}"/>
+
+    <SolidColorBrush x:Key="DefaultBackgroundDownColorBrush" Color="{StaticResource DefaultBackgroundDownColor}"/>
+    <SolidColorBrush x:Key="DefaultBorderDownColorBrush" Color="{StaticResource DefaultBorderDownColor}"/>
+    <SolidColorBrush x:Key="DefaultForegroundDownColorBrush" Color="{StaticResource DefaultForegroundDownColor}"/>
 
 </ResourceDictionary>
