--- a/Yume.Controls/Yume.Controls/Themes/Controls/Buttons.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Controls/Buttons.xaml
@@ -5,7 +5,7 @@
     </ResourceDictionary.MergedDictionaries>
     <Style TargetType="{x:Type Button}">
         <Setter Property="OverridesDefaultStyle" Value="True"/>
-        <Setter Property="Padding" Value="12 10 12 9" />
+        <Setter Property="Padding" Value="12 11 12 10" />
         <Setter Property="MinWidth" Value="100"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -13,36 +13,54 @@
         <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
         <Setter Property="RenderOptions.BitmapScalingMode" Value="Fant"/>
         <Setter Property="FontSize" Value="12"/>
-        <Setter Property="FontFamily" Value="/Yume.Controls;component/Fonts/OpenSans/#Open Sans"/>
+        <Setter Property="FontFamily" Value="Helvetica Arial sans-serif"/>
         <Setter Property="FontWeight" Value="Normal"/>
-        <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Background" Value="{DynamicResource DefaultBackgroundColorBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource DefaultForegroundColorBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource DefaultBorderColorBrush}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Padding="{TemplateBinding Padding}" x:Name="Border" BorderThickness="1" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" CornerRadius="2">
-                        <ContentPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" />
+                    <Border Padding="{TemplateBinding Padding}" x:Name="Border" BorderThickness=".9" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" CornerRadius="2">
+                        <ContentPresenter x:Name="PART_Button" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" />
+                        <VisualStateManager.VisualStateGroups>
+                            
+                            <VisualStateGroup x:Name="CommonStates">
+                                
+                                <VisualStateGroup.Transitions>
+                                    <VisualTransition GeneratedDuration="0:0:0.2"/>
+                                </VisualStateGroup.Transitions>
+                                
+                                <VisualState x:Name="Normal"/>
+                                
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" To="{StaticResource DefaultBackgroundDownColor}"/>
+                                        <ColorAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="(Button.BorderBrush).(SolidColorBrush.Color)" To="{StaticResource DefaultBorderDownColor}"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="MouseOver">
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" To="{StaticResource DefaultBackgroundHoverColor}"/>
+                                        <ColorAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="(Button.BorderBrush).(SolidColorBrush.Color)" To="{StaticResource DefaultBorderHoverColor}"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState Name="Unfocused"/>
+                                <!--Right here-->
+                                <VisualState Name="Focused">
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetProperty="(Border.RenderTransform).(TransformGroup.Children)[1].(TranslateTransform.Y)"
+                                                         To="-20" AutoReverse="True" RepeatBehavior="Forever" 
+                                                            Duration="0:0:.4">
+                                            <DoubleAnimation.EasingFunction>
+                                                <QuadraticEase/>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
                     </Border>
-                    <ControlTemplate.Triggers>
-                        <EventTrigger RoutedEvent="Button.MouseEnter">
-                            <BeginStoryboard>
-                                <Storyboard>
-                                    <ColorAnimation Storyboard.TargetName="Border"
-                                                    To="{StaticResource DefaultBackgroundHoverColor}" 
-                                                    Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                                    FillBehavior="HoldEnd"
-                                                    Duration="0:0:0.200"/>
-                                    <ColorAnimation Storyboard.TargetName="Border"
-                                                    To="{StaticResource DefaultBorderHoverColor}"
-                                                    Storyboard.TargetProperty="(Button.BorderBrush).(SolidColorBrush.Color)"
-                                                    FillBehavior="HoldEnd"
-                                                    Duration="0:0:0.200"/>
-                                </Storyboard>
-                            </BeginStoryboard>
-                        </EventTrigger>
-                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
