--- a/Yume.Controls/Yume.Controls.Test/MainWindow.xaml
+++ b/Yume.Controls/Yume.Controls.Test/MainWindow.xaml
@@ -3,29 +3,65 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Yume.Controls.Test"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" RenderOptions.BitmapScalingMode="Fant" RenderOptions.CachingHint="Cache">
-    <StackPanel Orientation="Vertical" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto">
-        <Expander Header="Buttons" Padding="2.5" Margin="2.5" BorderThickness="2" BorderBrush="{DynamicResource DefaultBackgroundColorBrush}">
-            <StackPanel Orientation="Vertical" Margin="2.5">
-                <ItemsControl Margin="2.5" IsEnabled="{Binding ElementName=SetBtnValue, Path=IsChecked}">
-                    <ItemsControl.Template>
-                        <ControlTemplate>
-                            <Border Padding="1">
-                                <WrapPanel IsItemsHost="True"/>
-                            </Border>
-                        </ControlTemplate>
-                    </ItemsControl.Template>
-                    <Button Content="Default" Margin="2.5" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                    <Button Content="Primary" Style="{StaticResource PrimaryBtn}" Margin="2.5"  />
-                    <Button Content="Success" Style="{StaticResource SuccessBtn}" Margin="2.5" />
-                    <Button Content="Warning" Style="{StaticResource WarningBtn}" Margin="2.5" />
-                    <Button Content="Danger" Style="{StaticResource DangerBtn}" Margin="2.5" />
-                    <Button Content="Info" Style="{StaticResource InfoBtn}" Margin="2.5" />
-                </ItemsControl>
-                <CheckBox Margin="5" x:Name="SetBtnValue" Content="Enable all buttons" IsChecked="True" />
-            </StackPanel>
-        </Expander>
-    </StackPanel>
+        Title="MainWindow" Height="350" Width="525" RenderOptions.BitmapScalingMode="Fant"
+        RenderOptions.CachingHint="Cache">
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+        <StackPanel Orientation="Vertical" ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <Expander Header="Buttons" Padding="2.5" Margin="2.5" BorderThickness="2"
+                      BorderBrush="{DynamicResource DefaultBackgroundColorBrush}">
+                <StackPanel Orientation="Vertical" Margin="2.5">
+                    <ItemsControl Margin="2.5" IsEnabled="{Binding ElementName=SetBtnValue, Path=IsChecked}">
+                        <ItemsControl.Template>
+                            <ControlTemplate>
+                                <Border Padding="1">
+                                    <WrapPanel IsItemsHost="True" />
+                                </Border>
+                            </ControlTemplate>
+                        </ItemsControl.Template>
+                        <Button Content="Default" Margin="2.5" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                        <Button Content="Primary" Style="{StaticResource PrimaryBtn}" Margin="2.5" />
+                        <Button Content="Success" Style="{StaticResource SuccessBtn}" Margin="2.5" />
+                        <Button Content="Warning" Style="{StaticResource WarningBtn}" Margin="2.5" />
+                        <Button Content="Danger" Style="{StaticResource DangerBtn}" Margin="2.5" />
+                        <Button Content="Info" Style="{StaticResource InfoBtn}" Margin="2.5" />
+
+                    </ItemsControl>
+                    <CheckBox Margin="5" x:Name="SetBtnValue" Content="Enable all buttons" IsChecked="True" />
+                </StackPanel>
+            </Expander>
+            <Expander Header="Sliders" Padding="2.5" Margin="2.5" BorderThickness="2"
+                      BorderBrush="{DynamicResource DefaultBackgroundColorBrush}">
+                <StackPanel Orientation="Vertical" Margin="2.5">
+                    <StackPanel HorizontalAlignment="Left" IsEnabled="{Binding ElementName=SetSlidersValue, Path=IsChecked}">
+                        <GroupBox Header="Default slider">
+                            <StackPanel>
+                                <Slider Margin="2.5" Width="300"  />
+                                <Slider Style="{DynamicResource PrimarySlider}" Margin="2.5" Width="300" />
+                            </StackPanel>
+                        </GroupBox>
+                        <GroupBox Header="TickPlacement TopLeft">
+                            <StackPanel>
+                                <Slider Width="300" Margin="2.5" TickPlacement="TopLeft" />
+                                <Slider Style="{StaticResource PrimarySlider}" Width="300" Margin="2.5" TickPlacement="TopLeft" />
+                            </StackPanel>
+                        </GroupBox>
+                        <GroupBox Header="TickPlacement BottomRight">
+                            <StackPanel>
+                                <Slider Width="300"  Margin="2.5" TickPlacement="BottomRight" />
+                            </StackPanel>
+                        </GroupBox>
+                        <GroupBox Header=" TickPlacement Both">
+                            <StackPanel>
+                                <Slider Width="300" Margin="2.5" TickPlacement="Both" />
+                                <Slider Style="{StaticResource PrimarySlider}" Width="300" Margin="2.5" TickPlacement="Both" />
+                            </StackPanel>
+                        </GroupBox>
+                    </StackPanel>
+                    <CheckBox Margin="5" x:Name="SetSlidersValue" Content="Enable all sliders" IsChecked="True" />
+                </StackPanel>
+            </Expander>
+        </StackPanel>
+    </ScrollViewer>
 </Window>
