--- a/Yume.Controls/Yume.Controls/Themes/Generic.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Generic.xaml
@@ -2,5 +2,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="./Controls/Buttons.xaml"/>
+        <ResourceDictionary Source="./Controls/Sliders.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
