--- a/Yume.Controls/Yume.Controls/Themes/Generic.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Generic.xaml
@@ -1,7 +1,6 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="./Controls/Buttons.xaml"/>
-        <ResourceDictionary Source="./Controls/Sliders.xaml"/>
+        <ResourceDictionary Source="./Controls/Buttons.xaml" />
+        <ResourceDictionary Source="./Controls/Sliders.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
